[workspace]
resolver = "2"
members = ["test"]

[workspace.package]
edition = "2021"
# rust-version = "77.88" # Fake for regex
  "rust-version"   =   '''1.80.0''' # We're quirky on purpose to test the regex.
license = "Apache-2.0 OR MIT"
repository = "https://github.com/xStrom/ci-test"

[profile.ci]
inherits = "dev"
debug = 0 # Don't compile debug info to reduce compilation artifact size for cache benefits.
strip = "debuginfo" # Implied by debug = 0 since Rust 1.77, but still needed for an older MSRV.
[profile.ci.package."*"]
debug-assertions = true # Keep always on for dependencies for cache reuse.
