[workspace]
resolver = "2"
members = ["test", "test_no_wasm", "test_no_wasm_2"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/xStrom/ci-test"

[profile.ci]
inherits = "dev"
debug = 0 # Don't compile debug info to reduce compilation artifact size for cache benefits.
strip = "debuginfo" # Implied by debug = 0 since Rust 1.77, but still needed for an older MSRV.
[profile.ci.package."*"]
debug-assertions = true # Keep always on for dependencies for cache reuse.
